Removing ra decs and adding specz on HS82

--- a/dmu1/dmu1_ml_Herschel-Stripe-82/2.3_Merging.ipynb
+++ b/dmu1/dmu1_ml_Herschel-Stripe-82/2.3_Merging.ipynb
@@ -1236,6 +1236,11 @@
     "            sub_catalogue[col].fill_value = 0\n",
     "        elif \"id\" in col:\n",
     "            sub_catalogue[col].fill_value = -1\n",
+    "        #Remove residual ra decs from join\n",
+    "        if col.endswith('_ra'):\n",
+    "            sub_catalogue.remove_column(col)\n",
+    "        if col.endswith('_dec'):\n",
+    "            sub_catalogue.remove_column(col)\n",
     "        \n",
     "    sub_catalogue = master_catalogue.filled()\n",
     "    \n",
@@ -1290,6 +1295,7 @@
     "        1 * has_optical_flux + 2 * has_nir_flux + 4 * has_mir_flux,\n",
     "        name=\"flag_optnir_det\")\n",
     "        )\n",
+    "    \n",
     "    \n",
     "    # Remove id names and write file\n",
     "    sub_catalogue.remove_columns(id_names)\n",
