Lockman-SWIRE Cigale optnir-zspec input run on Vulcain
Also lots of tidying column naming

--- a/dmu1/dmu1_ml_NGP/3_Checks_and_diagnostics.ipynb
+++ b/dmu1/dmu1_ml_NGP/3_Checks_and_diagnostics.ipynb
@@ -290,10 +290,10 @@
    "outputs": [],
    "source": [
     "u_bands = [          ]\n",
-    "g_bands = [           \"GPC1 g\", \"BASS g\"]\n",
-    "r_bands = [           \"GPC1 r\", \"BASS r\"]\n",
+    "g_bands = [           \"GPC1 g\", \"90prime g\"]\n",
+    "r_bands = [           \"GPC1 r\", \"90prime r\"]\n",
     "i_bands = [           \"GPC1 i\"]\n",
-    "z_bands = [\"DECam z\", \"GPC1 z\", \"BASS z\"]\n",
+    "z_bands = [\"DECam z\", \"GPC1 z\", \"Mosaic z\"]\n",
     "y_bands = [           \"GPC1 y\"]"
    ]
   },
