--- a/dmu1/dmu1_ml_SA13/1.1_LegacySurvey.ipynb
+++ b/dmu1/dmu1_ml_SA13/1.1_LegacySurvey.ipynb
@@ -570,18 +570,18 @@
     "        \"objid\": \"legacy_id\",\n",
     "        \"ra\": \"legacy_ra\",\n",
     "        \"dec\": \"legacy_dec\",\n",
-    "        \"flux_g\": \"f_bass_g\",\n",
-    "        \"flux_ivar_g\": \"ferr_bass_g\",\n",
-    "        \"apflux_g\": \"f_ap_bass_g\",\n",
-    "        \"apflux_ivar_g\": \"ferr_ap_bass_g\",\n",
-    "        \"flux_r\": \"f_bass_r\",\n",
-    "        \"flux_ivar_r\": \"ferr_bass_r\",\n",
-    "        \"apflux_r\": \"f_ap_bass_r\",\n",
-    "        \"apflux_ivar_r\": \"ferr_ap_bass_r\",\n",
-    "        \"flux_z\": \"f_bass_z\",\n",
-    "        \"flux_ivar_z\": \"ferr_bass_z\",\n",
-    "        \"apflux_z\": \"f_ap_bass_z\",\n",
-    "        \"apflux_ivar_z\": \"ferr_ap_bass_z\",\n",
+    "        \"flux_g\": \"f_90prime_g\",\n",
+    "        \"flux_ivar_g\": \"ferr_90prime_g\",\n",
+    "        \"apflux_g\": \"f_ap_90prime_g\",\n",
+    "        \"apflux_ivar_g\": \"ferr_ap_90prime_g\",\n",
+    "        \"flux_r\": \"f_90prime_r\",\n",
+    "        \"flux_ivar_r\": \"ferr_90prime_r\",\n",
+    "        \"apflux_r\": \"f_ap_90prime_r\",\n",
+    "        \"apflux_ivar_r\": \"ferr_ap_90prime_r\",\n",
+    "        \"flux_z\": \"f_mosaic_z\",\n",
+    "        \"flux_ivar_z\": \"ferr_mosaic_z\",\n",
+    "        \"apflux_z\": \"f_ap_mosaic_z\",\n",
+    "        \"apflux_ivar_z\": \"ferr_ap_mosaic_z\",\n",
     "        \"stellarity\": \"legacy_stellarity\"\n",
     "    })\n",
     "\n",
@@ -744,7 +744,7 @@
    ],
    "source": [
     "SORT_COLS = [\n",
-    "        'merr_ap_bass_g', 'merr_ap_bass_r', 'merr_ap_bass_z']\n",
+    "        'merr_ap_90prime_g', 'merr_ap_90prime_r', 'merr_ap_mosaic_z']\n",
     "FLAG_NAME = 'legacy_flag_cleaned'\n",
     "\n",
     "nb_orig_sources = len(catalogue)\n",
