--- a/dmu1/dmu1_ml_SA13/1.2_UHS.ipynb
+++ b/dmu1/dmu1_ml_SA13/1.2_UHS.ipynb
@@ -104,10 +104,10 @@
     "        'RA': \"uhs_ra\",\n",
     "        'DEC': \"uhs_dec\",\n",
     "        'PSTAR':  \"uhs_stellarity\",\n",
-    "        'JPETROMAG': \"m_wfcam_j\", \n",
-    "        'JPETROMAGERR': \"merr_wfcam_j\", \n",
-    "        'JAPERMAG4': \"m_ap_wfcam_j\", \n",
-    "        'JAPERMAG4ERR': \"merr_ap_wfcam_j\", \n",
+    "        'JPETROMAG': \"m_ukidss_j\", \n",
+    "        'JPETROMAGERR': \"merr_ukidss_j\", \n",
+    "        'JAPERMAG4': \"m_ap_ukidss_j\", \n",
+    "        'JAPERMAG4ERR': \"merr_ap_ukidss_j\", \n",
     "\n",
     "    })\n",
     "\n",
@@ -283,7 +283,7 @@
     }
    ],
    "source": [
-    "SORT_COLS = ['merr_ap_wfcam_j']\n",
+    "SORT_COLS = ['merr_ap_ukidss_j']\n",
     "FLAG_NAME = 'uhs_flag_cleaned'\n",
     "\n",
     "nb_orig_sources = len(catalogue)\n",
@@ -492,7 +492,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
