--- a/dmu1/dmu1_ml_SGP/1.4_VISTA-VIKING.ipynb
+++ b/dmu1/dmu1_ml_SGP/1.4_VISTA-VIKING.ipynb
@@ -121,10 +121,10 @@
     "        'HPETROMAGERR': \"merr_vista_h\", \n",
     "        'HAPERMAG3': \"m_ap_vista_h\", \n",
     "        'HAPERMAG3ERR': \"merr_ap_vista_h\",        \n",
-    "        'KSPETROMAG': \"m_vista_k\", \n",
-    "        'KSPETROMAGERR': \"merr_vista_k\", \n",
-    "        'KSAPERMAG3': \"m_ap_vista_k\", \n",
-    "        'KSAPERMAG3ERR': \"merr_ap_vista_k\",\n",
+    "        'KSPETROMAG': \"m_vista_ks\", \n",
+    "        'KSPETROMAGERR': \"merr_vista_ks\", \n",
+    "        'KSAPERMAG3': \"m_ap_vista_ks\", \n",
+    "        'KSAPERMAG3ERR': \"merr_ap_vista_ks\",\n",
     "    })\n",
     "\n",
     "\n",
@@ -295,7 +295,7 @@
     }
    ],
    "source": [
-    "SORT_COLS = ['merr_ap_vista_y', 'merr_ap_vista_h', 'merr_ap_vista_j', 'merr_ap_vista_k']\n",
+    "SORT_COLS = ['merr_ap_vista_y', 'merr_ap_vista_h', 'merr_ap_vista_j', 'merr_ap_vista_ks']\n",
     "FLAG_NAME = 'viking_flag_cleaned'\n",
     "\n",
     "nb_orig_sources = len(catalogue)\n",
@@ -511,7 +511,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
