--- a/dmu1/dmu1_ml_SGP/2.2_Merging.ipynb
+++ b/dmu1/dmu1_ml_SGP/2.2_Merging.ipynb
@@ -989,7 +989,7 @@
     "        1 * ~np.isnan(sub_catalogue['f_vista_y']) +\n",
     "        1 * ~np.isnan(sub_catalogue['f_vista_j']) +\n",
     "        1 * ~np.isnan(sub_catalogue['f_vista_h']) +\n",
-    "        1 * ~np.isnan(sub_catalogue['f_vista_k'])\n",
+    "        1 * ~np.isnan(sub_catalogue['f_vista_ks'])\n",
     "    )\n",
     "\n",
     "    nb_mir_flux = np.zeros(len(sub_catalogue), dtype=bool)\n",
