--- a/dmu1/dmu1_ml_SGP/3_Checks_and_diagnostics.ipynb
+++ b/dmu1/dmu1_ml_SGP/3_Checks_and_diagnostics.ipynb
@@ -266,9 +266,7 @@
     "| H    | 1024            |\n",
     "| Ks   | 666.7           |\n",
     "\n",
-    "In addition, VISTA uses a K band whereas 2MASS uses a Ks (“short”) band, [this page](http://www.ipac.caltech.edu/2mass/releases/allsky/doc/sec6_4b.html) give a correction to convert the K band in a Ks band with the formula:\n",
-    "\n",
-    "$$K_{s(2MASS)} = K_{UKIRT} + 0.003 + 0.004 * (J−K)_{UKIRT}$$"
+    "In addition, VISTA uses a Ks band."
    ]
   },
   {
@@ -322,9 +320,7 @@
    },
    "outputs": [],
    "source": [
-    "vista_ks_like = master_catalogue['m_vista_k'] + 0.003 + 0.004 * (\n",
-    "    master_catalogue['m_vista_k'] - master_catalogue['m_vista_k'])\n",
-    "nb_compare_mags(twomass['kmag'] + k_2mass_to_ab, vista_ks_like[ml_twomass_idx],\n",
+    "nb_compare_mags(twomass['kmag'] + k_2mass_to_ab, master_catalogue['m_vista_ks'][ml_twomass_idx],\n",
     "                labels=(\"2MASS Ks\", \"VISTA Ks-like (total)\"))"
    ]
   },
@@ -391,8 +387,8 @@
    "source": [
     "nb_ccplots(\n",
     "    master_catalogue['m_omegacam_g'] - master_catalogue['m_omegacam_i'],\n",
-    "    master_catalogue['m_vista_j'] - master_catalogue['m_vista_k'],\n",
-    "    \"g - i (Omegacam)\", \"J - K (VISTA)\",\n",
+    "    master_catalogue['m_vista_j'] - master_catalogue['m_vista_ks'],\n",
+    "    \"g - i (Omegacam)\", \"J - Ks (VISTA)\",\n",
     "    master_catalogue[\"stellarity\"]\n",
     ")"
    ]
@@ -407,8 +403,8 @@
    "source": [
     "nb_ccplots(\n",
     "    master_catalogue['m_gpc1_i'] - master_catalogue['m_vista_j'],\n",
-    "    master_catalogue['m_gpc1_g'] - master_catalogue['m_vista_k'],\n",
-    "    \"GPC1 i - VISTA J\", \"GPC1 g - VISTA K\",\n",
+    "    master_catalogue['m_gpc1_g'] - master_catalogue['m_vista_ks'],\n",
+    "    \"GPC1 i - VISTA J\", \"GPC1 g - VISTA Ks\",\n",
     "    master_catalogue[\"stellarity\"]\n",
     ")"
    ]
@@ -438,9 +434,9 @@
    "outputs": [],
    "source": [
     "nb_ccplots(\n",
-    "    master_catalogue['m_vista_j'] - master_catalogue['m_vista_k'],\n",
+    "    master_catalogue['m_vista_j'] - master_catalogue['m_vista_ks'],\n",
     "    master_catalogue['m_gpc1_g'] - master_catalogue['m_gpc1_i'],\n",
-    "    \"J - K (VISTA)\", \"g - J (GPC1, VISTA)\",\n",
+    "    \"J - Ks (VISTA)\", \"g - J (GPC1, VISTA)\",\n",
     "    master_catalogue[\"stellarity\"]\n",
     ")"
    ]
