--- a/dmu1/dmu1_ml_SSDF/1.2_VISTA-VHS.ipynb
+++ b/dmu1/dmu1_ml_SSDF/1.2_VISTA-VHS.ipynb
@@ -195,6 +195,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for col in catalogue.colnames:\n",
+    "    if '_vista_k' in col:\n",
+    "        catalogue.rename_column(col, col.replace('_vista_k', '_vista_ks'))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [
@@ -287,7 +300,7 @@
     }
    ],
    "source": [
-    "SORT_COLS = ['merr_ap_vista_h', 'merr_ap_vista_j', 'merr_ap_vista_k']\n",
+    "SORT_COLS = ['merr_ap_vista_h', 'merr_ap_vista_j', 'merr_ap_vista_ks']\n",
     "FLAG_NAME = 'vhs_flag_cleaned'\n",
     "\n",
     "nb_orig_sources = len(catalogue)\n",
@@ -503,7 +516,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
