--- a/dmu1/dmu1_ml_SSDF/3_Checks_and_diagnostics.ipynb
+++ b/dmu1/dmu1_ml_SSDF/3_Checks_and_diagnostics.ipynb
@@ -219,9 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -245,7 +243,7 @@
     "        np.sum(flag_det[flag_obs == 7] == 3),\n",
     "        np.sum(flag_det[flag_obs == 7] == 7)\n",
     "    ],\n",
-    "    set_labels=('Optical', 'near-IR', 'mid-IR'),\n",
+    "    set_labels=('mid-IR', 'near-IR',  'Optical'),\n",
     "    subset_label_formatter=lambda x: \"{}%\".format(int(100*x/np.sum(flag_det != 0)))\n",
     ")\n",
     "plt.title(\"Detection of the {} sources detected\\n in any wavelength domains \"\n",
@@ -276,9 +274,9 @@
     "i_bands = [\"DECam i\"]\n",
     "z_bands = [\"DECam z\"]\n",
     "y_bands = [\"DECam y\"]\n",
-    "j_bands =           [ \"VISTA j\"]\n",
-    "h_bands =           [ \"VISTA h\"]\n",
-    "k_bands =           [ \"VISTA k\"]\n",
+    "j_bands =           [ \"VISTA J\"]\n",
+    "h_bands =           [ \"VISTA H\"]\n",
+    "k_bands =           [ \"VISTA Ks\"]\n",
     "irac_bands =                    [\"IRAC I1\", \"IRAC I2\"]"
    ]
   },
@@ -495,7 +493,7 @@
     }
    ],
    "source": [
-    "nb_compare_mags(twomass['kmag'] + k_2mass_to_ab, master_catalogue['m_vista_k'][ml_twomass_idx],\n",
+    "nb_compare_mags(twomass['kmag'] + k_2mass_to_ab, master_catalogue['m_vista_ks'][ml_twomass_idx],\n",
     "                labels=(\"2MASS Ks\", \"VISTA Ks (total)\"))"
    ]
   },
@@ -611,7 +609,7 @@
    "source": [
     "nb_ccplots(\n",
     "    master_catalogue['m_vista_j'] - master_catalogue['m_vista_h'],\n",
-    "    master_catalogue['m_vista_k'] - master_catalogue['m_irac_i1'],\n",
+    "    master_catalogue['m_vista_ks'] - master_catalogue['m_irac_i1'],\n",
     "    \"J - H (VISTA)\", \"Ks - irac_i1 (VISTA, SSDF)\",\n",
     "    master_catalogue[\"stellarity\"]\n",
     ")"
@@ -643,7 +641,7 @@
    "source": [
     "nb_ccplots(\n",
     "    master_catalogue['m_irac_i1'] - master_catalogue['m_irac_i2'],\n",
-    "    master_catalogue['m_vista_j'] - master_catalogue['m_vista_k'],\n",
+    "    master_catalogue['m_vista_j'] - master_catalogue['m_vista_ks'],\n",
     "    \"irac_i1 - irac_i1\", \"VISTA J - VISTA Ks\",\n",
     "    master_catalogue[\"stellarity\"]\n",
     ")"
