--- a/dmu1/dmu1_ml_XMM-13hr/1.2_UHS.ipynb
+++ b/dmu1/dmu1_ml_XMM-13hr/1.2_UHS.ipynb
@@ -42,7 +42,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -102,10 +104,10 @@
     "        'RA': \"uhs_ra\",\n",
     "        'DEC': \"uhs_dec\",\n",
     "        'PSTAR':  \"uhs_stellarity\",\n",
-    "        'JPETROMAG': \"m_wfcam_j\", \n",
-    "        'JPETROMAGERR': \"merr_wfcam_j\", \n",
-    "        'JAPERMAG4': \"m_ap_wfcam_j\", \n",
-    "        'JAPERMAG4ERR': \"merr_ap_wfcam_j\", \n",
+    "        'JPETROMAG': \"m_ukidss_j\", \n",
+    "        'JPETROMAGERR': \"merr_ukidss_j\", \n",
+    "        'JAPERMAG4': \"m_ap_ukidss_j\", \n",
+    "        'JAPERMAG4ERR': \"merr_ap_ukidss_j\", \n",
     "\n",
     "    })\n",
     "\n",
@@ -281,7 +283,7 @@
     }
    ],
    "source": [
-    "SORT_COLS = ['merr_ap_wfcam_j']\n",
+    "SORT_COLS = ['merr_ap_ukidss_j']\n",
     "FLAG_NAME = 'uhs_flag_cleaned'\n",
     "\n",
     "nb_orig_sources = len(catalogue)\n",
