--- a/dmu1/dmu1_ml_XMM-13hr/2_Merging.ipynb
+++ b/dmu1/dmu1_ml_XMM-13hr/2_Merging.ipynb
@@ -25,7 +25,9 @@
    ],
    "source": [
     "from herschelhelp_internal import git_version\n",
-    "print(\"This notebook was run with herschelhelp_internal version: \\n{}\".format(git_version()))"
+    "print(\"This notebook was run with herschelhelp_internal version: \\n{}\".format(git_version()))\n",
+    "import datetime\n",
+    "print(\"This notebook was executed on: \\n{}\".format(datetime.datetime.now()))"
    ]
   },
   {
@@ -597,13 +599,13 @@
     "# CFHT band.\n",
     "# Check to use catalogue flags from HSC and PanSTARRS.\n",
     "nb_optical_flux = (\n",
-    "    1 * ~np.isnan(master_catalogue['f_bass_g']) +\n",
-    "    1 * ~np.isnan(master_catalogue['f_bass_r']) +\n",
-    "    1 * ~np.isnan(master_catalogue['f_bass_z'])\n",
+    "    1 * ~np.isnan(master_catalogue['f_90prime_g']) +\n",
+    "    1 * ~np.isnan(master_catalogue['f_90prime_r']) +\n",
+    "    1 * ~np.isnan(master_catalogue['f_mosaic_z'])\n",
     ")\n",
     "\n",
     "nb_nir_flux = (\n",
-    "    1 * ~np.isnan(master_catalogue['f_wfcam_j']) \n",
+    "    1 * ~np.isnan(master_catalogue['f_ukidss_j']) \n",
     ")\n",
     "\n",
     "nb_mir_flux = np.zeros(len(master_catalogue), dtype=float)"
@@ -726,7 +728,7 @@
     "                \"flag_{}\".format(band)]    \n",
     "    \n",
     "columns += [\"stellarity\", \"stellarity_origin\", \"flag_cleaned\", \"flag_merged\", \"flag_gaia\", \"flag_optnir_obs\", \n",
-    "            \"flag_optnir_det\", \"ebv\"]"
+    "            \"flag_optnir_det\", \"ebv\", 'zspec_association_flag', 'zspec_qual', 'zspec']"
    ]
   },
   {
