--- a/dmu1/dmu1_ml_XMM-13hr/3_Checks_and_diagnostics.ipynb
+++ b/dmu1/dmu1_ml_XMM-13hr/3_Checks_and_diagnostics.ipynb
@@ -27,7 +27,9 @@
    ],
    "source": [
     "from herschelhelp_internal import git_version\n",
-    "print(\"This notebook was run with herschelhelp_internal version: \\n{}\".format(git_version()))"
+    "print(\"This notebook was run with herschelhelp_internal version: \\n{}\".format(git_version()))\n",
+    "import datetime\n",
+    "print(\"This notebook was executed on: \\n{}\".format(datetime.datetime.now()))"
    ]
   },
   {
@@ -221,10 +223,10 @@
    "outputs": [],
    "source": [
     "u_bands = []\n",
-    "g_bands = [\"BASS g\"]\n",
-    "r_bands = [\"BASS r\"]\n",
+    "g_bands = [\"90prime g\"]\n",
+    "r_bands = [\"90prime r\"]\n",
     "i_bands = []\n",
-    "z_bands = [\"BASS z\"]\n",
+    "z_bands = [\"Mosaic z\"]\n",
     "y_bands = []\n"
    ]
   },
@@ -390,7 +392,7 @@
     }
    ],
    "source": [
-    "nb_compare_mags(twomass['jmag'] + j_2mass_to_ab, master_catalogue['m_wfcam_j'][ml_twomass_idx],\n",
+    "nb_compare_mags(twomass['jmag'] + j_2mass_to_ab, master_catalogue['m_ukidss_j'][ml_twomass_idx],\n",
     "                labels=(\"2MASS J\", \"WFCAM J (total)\"))"
    ]
   },
@@ -461,8 +463,8 @@
    ],
    "source": [
     "nb_ccplots(\n",
-    "    master_catalogue['m_bass_r'],\n",
-    "    master_catalogue['m_ap_bass_r'] - master_catalogue['m_bass_r'],\n",
+    "    master_catalogue['m_90prime_r'],\n",
+    "    master_catalogue['m_ap_90prime_r'] - master_catalogue['m_90prime_r'],\n",
     "    \"r total magnitude (BASS)\", \"r aperture mag - total mag (BASS)\",\n",
     "    master_catalogue[\"stellarity\"],\n",
     "    invert_x=True\n",
@@ -505,8 +507,8 @@
    ],
    "source": [
     "nb_ccplots(\n",
-    "    master_catalogue['m_bass_g'] - master_catalogue['m_bass_r'],\n",
-    "    master_catalogue['m_bass_z'] - master_catalogue['m_wfcam_j'],\n",
+    "    master_catalogue['m_90prime_g'] - master_catalogue['m_90prime_r'],\n",
+    "    master_catalogue['m_mosaic_z'] - master_catalogue['m_ukidss_j'],\n",
     "    \"g - r (BASS)\", \"z - J (BASS, WFCAM)\",\n",
     "    master_catalogue[\"stellarity\"]\n",
     ")"
