--- a/dmu1/dmu1_ml_NGP/2_Merging.ipynb
+++ b/dmu1/dmu1_ml_NGP/2_Merging.ipynb
@@ -679,9 +679,9 @@
     "    1 * ~np.isnan(master_catalogue['f_gpc1_i']) +\n",
     "    1 * ~np.isnan(master_catalogue['f_gpc1_z']) +\n",
     "    1 * ~np.isnan(master_catalogue['f_gpc1_y']) +\n",
-    "    1 * ~np.isnan(master_catalogue['f_bass_g']) +\n",
-    "    1 * ~np.isnan(master_catalogue['f_bass_r']) +\n",
-    "    1 * ~np.isnan(master_catalogue['f_bass_z']) +\n",
+    "    1 * ~np.isnan(master_catalogue['f_90prime_g']) +\n",
+    "    1 * ~np.isnan(master_catalogue['f_90prime_r']) +\n",
+    "    1 * ~np.isnan(master_catalogue['f_mosaic_z']) +\n",
     "    1 * ~np.isnan(master_catalogue['f_decam_z']) \n",
     ")\n",
     "\n",
