--- a/dmu1/dmu1_ml_SA13/3_Checks_and_diagnostics.ipynb
+++ b/dmu1/dmu1_ml_SA13/3_Checks_and_diagnostics.ipynb
@@ -221,11 +221,12 @@
    "outputs": [],
    "source": [
     "u_bands = []\n",
-    "g_bands = [\"BASS g\"]\n",
-    "r_bands = [\"BASS r\"]\n",
+    "g_bands = [\"90prime g\"]\n",
+    "r_bands = [\"90prime r\"]\n",
     "i_bands = []\n",
-    "z_bands = [\"BASS z\"]\n",
-    "y_bands = []\n"
+    "z_bands = [\"Mosaic z\"]\n",
+    "y_bands = []\n",
+    "j_bands = [\"UKIDSS J\"]"
    ]
   },
   {
@@ -256,7 +257,7 @@
     }
    ],
    "source": [
-    "for bands in [g_bands + r_bands + z_bands]:\n",
+    "for bands in [g_bands + r_bands + z_bands + j_bands]:\n",
     "    colnames = [\"m_{}\".format(band.replace(\" \", \"_\").lower()) for band in bands]\n",
     "    nb_histograms(master_catalogue, colnames, bands)"
    ]
@@ -392,7 +393,7 @@
     }
    ],
    "source": [
-    "nb_compare_mags(twomass['jmag'] + j_2mass_to_ab, master_catalogue['m_wfcam_j'][ml_twomass_idx],\n",
+    "nb_compare_mags(twomass['jmag'] + j_2mass_to_ab, master_catalogue['m_ukidss_j'][ml_twomass_idx],\n",
     "                labels=(\"2MASS J\", \"WFCAM J (total)\"))"
    ]
   },
@@ -463,8 +464,8 @@
    ],
    "source": [
     "nb_ccplots(\n",
-    "    master_catalogue['m_bass_r'],\n",
-    "    master_catalogue['m_ap_bass_r'] - master_catalogue['m_bass_r'],\n",
+    "    master_catalogue['m_90prime_r'],\n",
+    "    master_catalogue['m_ap_90prime_r'] - master_catalogue['m_90prime_r'],\n",
     "    \"r total magnitude (BASS)\", \"r aperture mag - total mag (BASS)\",\n",
     "    master_catalogue[\"stellarity\"],\n",
     "    invert_x=True\n",
@@ -507,8 +508,8 @@
    ],
    "source": [
     "nb_ccplots(\n",
-    "    master_catalogue['m_bass_g'] - master_catalogue['m_bass_r'],\n",
-    "    master_catalogue['m_bass_z'] - master_catalogue['m_wfcam_j'],\n",
+    "    master_catalogue['m_90prime_g'] - master_catalogue['m_90prime_r'],\n",
+    "    master_catalogue['m_mosaic_z'] - master_catalogue['m_ukidss_j'],\n",
     "    \"g - r (BASS)\", \"z - J (BASS, WFCAM)\",\n",
     "    master_catalogue[\"stellarity\"]\n",
     ")"
