--- a/dmu1/dmu1_ml_xFLS/1.3_KPNO-FLS.ipynb
+++ b/dmu1/dmu1_ml_xFLS/1.3_KPNO-FLS.ipynb
@@ -42,7 +42,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -102,10 +104,10 @@
     "        'RAJ2000': \"kpno_ra\",\n",
     "        'DEJ2000': \"kpno_dec\",\n",
     "        'Class':  \"kpno_stellarity\",\n",
-    "        'RcmagAp': \"m_ap_kpno_r\", \n",
-    "        'e_RcmagAp': \"merr_ap_kpno_r\", \n",
-    "        'RcmagTot': \"m_kpno_r\", \n",
-    "        'e_RcmagTot': \"merr_kpno_r\",\n",
+    "        'RcmagAp': \"m_ap_mosaic_r\", \n",
+    "        'e_RcmagAp': \"merr_ap_mosaic_r\", \n",
+    "        'RcmagTot': \"m_mosaic_r\", \n",
+    "        'e_RcmagTot': \"merr_mosaic_r\",\n",
     "    })\n",
     "\n",
     "\n",
@@ -122,7 +124,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Adding flux and band-flag columns\n",
@@ -229,7 +233,7 @@
     }
    ],
    "source": [
-    "SORT_COLS = ['merr_ap_kpno_r']\n",
+    "SORT_COLS = ['merr_ap_mosaic_r']\n",
     "FLAG_NAME = 'kpno_flag_cleaned'\n",
     "\n",
     "nb_orig_sources = len(catalogue)\n",
@@ -322,7 +326,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "catalogue[RA_COL] =  catalogue[RA_COL] + delta_ra.to(u.deg)\n",
