--- a/dmu1/dmu1_ml_xFLS/2_Merging.ipynb
+++ b/dmu1/dmu1_ml_xFLS/2_Merging.ipynb
@@ -759,10 +759,13 @@
     "    1 * ~np.isnan(master_catalogue['f_wfc_r']) +\n",
     "    1 * ~np.isnan(master_catalogue['f_wfc_i']) +\n",
     "    1 * ~np.isnan(master_catalogue['f_wfc_z']) +\n",
-    "    1 * ~np.isnan(master_catalogue['f_bass_g']) +\n",
-    "    1 * ~np.isnan(master_catalogue['f_bass_r']) +\n",
-    "    1 * ~np.isnan(master_catalogue['f_bass_z']) +\n",
-    "    1 * ~np.isnan(master_catalogue['f_kpno_r']) +\n",
+    "    #Legacy Survey\n",
+    "    1 * ~np.isnan(master_catalogue['f_90prime_g']) +\n",
+    "    1 * ~np.isnan(master_catalogue['f_90prime_r']) +\n",
+    "    1 * ~np.isnan(master_catalogue['f_mosaic_z']) +\n",
+    "    #KPNO-FLS\n",
+    "    1 * ~np.isnan(master_catalogue['f_mosaic_r']) +\n",
+    "    #PanSTARRS\n",
     "    1 * ~np.isnan(master_catalogue['f_gpc1_g']) +\n",
     "    1 * ~np.isnan(master_catalogue['f_gpc1_r']) +\n",
     "    1 * ~np.isnan(master_catalogue['f_gpc1_i']) +\n",
@@ -771,7 +774,7 @@
     ")\n",
     "\n",
     "nb_nir_flux = (\n",
-    "    1 * ~np.isnan(master_catalogue['f_wfcam_j']) \n",
+    "    1 * ~np.isnan(master_catalogue['f_ukidss_j']) \n",
     ")\n",
     "\n",
     "nb_mir_flux = (\n",
