SGP vista_k to vista_ks

--- a/dmu1/dmu1_ml_SGP/1.4_VISTA-VIKING.ipynb
+++ b/dmu1/dmu1_ml_SGP/1.4_VISTA-VIKING.ipynb
@@ -153,7 +153,7 @@
     "    \"y\": 0.618,\n",
     "    \"j\": 0.937,\n",
     "    \"h\": 1.384,\n",
-    "    \"k\": 1.839\n",
+    "    \"ks\": 1.839\n",
     "}"
    ]
   },
@@ -186,7 +186,10 @@
     "        catalogue[errcol][catalogue[errcol] <= 0] = np.nan  \n",
     "   \n",
     "        # Convert magnitude from Vega to AB\n",
-    "        catalogue[col] += vega_to_ab[col[-1]]\n",
+    "        band = col[-1]\n",
+    "        if band = 's':\n",
+    "            band = 'ks'\n",
+    "        catalogue[col] += vega_to_ab[band]\n",
     "\n",
     "        flux, error = mag_to_flux(np.array(catalogue[col]), np.array(catalogue[errcol]))\n",
     "        \n",
