tinkering on SGP

--- a/dmu1/dmu1_ml_SGP/2.2_Merging.ipynb
+++ b/dmu1/dmu1_ml_SGP/2.2_Merging.ipynb
@@ -952,6 +952,11 @@
     "            sub_catalogue[col].fill_value = 0\n",
     "        elif \"id\" in col:\n",
     "            sub_catalogue[col].fill_value = -1\n",
+    "        #Remove residual ra decs from join\n",
+    "        if col.endswith('_ra'):\n",
+    "            sub_catalogue.remove_column(col)\n",
+    "        if col.endswith('_dec'):\n",
+    "            sub_catalogue.remove_column(col)\n",
     "        \n",
     "    sub_catalogue = sub_catalogue.filled()\n",
     "    \n",
